tests/pass/run/ffi_callback_state_parity/app/main.kira
import callbacks as callbacks

struct CounterState {
    var count: Int
    var total: Int
}

@Main
function main() {
    var state = nativeState(CounterState {
        count: 0
        total: 0
    })
    var token = nativeUserData(state)

    print(run_native(token, 5))
    print(run_native(token, 7))

    var recovered = nativeRecover<CounterState>(token)
    print(recovered.count)
    print(recovered.total)
    return
}

@Native
function run_native(user_data: RawPtr, value: I64) -> I64 {
    return callbacks.kira_invoke_callback(on_value, user_data, value)
}

@Native
function on_value(value: I64, user_data: RawPtr) -> I64 {
    var state = nativeRecover<CounterState>(user_data)
    state.count = state.count + 1
    state.total = state.total + value
    return value + state.count
}
